pagination and front end fixes

--- a/blogpost/template/base.html
+++ b/blogpost/template/base.html
@@ -30,17 +30,17 @@
                 <li><a href="contact">Contact</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <!--<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
               </ul>
             </div>
           </div>
         </nav>
       <div class="jumbotron text-center">
-          <h1>My First Bootstrap Page</h1>
-          <p>Resize this responsive page to see the effect!</p> 
+          <h1>Cybersecurity Blog</h1>
+          <p>by Erdem Yilmaz</p> 
         </div>
         <div class="col-sm-8 col-sm-offset-2 text-center">
-            <h4><small>RECENT POSTS</small></h4>
+
             
 
           
@@ -51,38 +51,8 @@
     {% endblock %}
 <!-- Footer -->
 <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
-        </div>
-      </div>
+    <div class="col-sm-8 col-sm-offset-2 text-center">
+        <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
     </div>
   </footer>
    <!-- JavaScripts -->
