--- a/blogpost/template/pagination.html
+++ b/blogpost/template/pagination.html
@@ -1,13 +1,10 @@
-<div class="pagination">
-    <span class="step-links">
+<div class="col-sm-8 col-sm-offset-2">
+    <ul class="pager">
     {% if page.has_previous %}
-    <a href="?page={{ page.previous_page_number }}">Previous</a>
+    <li class="previous"><a href="?page={{ page.previous_page_number }}">Previous</a></li>
     {% endif %}
-    <span class="current">
-    Page {{ page.number }} of {{ page.paginator.num_pages }}.
-    </span>
     {% if page.has_next %}
-    <a href="?page={{ page.next_page_number }}">Next</a>
+    <li class="next"><a href="?page={{ page.next_page_number }}">Next</a></li>
     {% endif %}
-    </span>
-    </div>
+    </ul>
+</div>
