--- a/blogpost/template/post_detail.html
+++ b/blogpost/template/post_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{%for post in posts%}
+
 <div class="col-sm-8 col-sm-offset-2">
 <h2>
 
@@ -14,13 +14,13 @@
         <!--<h5><span class="label label-danger">Food</span> <span class="label label-primary">Ipsum</span></h5><br>-->
         {% endfor %}
         </h5>
-        <h4><p class="text-justify">{{post.body|truncatewords:50}}</p></h4>
+        <h4><p class="text-justify">{{post.body}}</p></h4>
         <br><br>
     </a>
 <h2>
 </div>
-{% endfor %}
 
-{% include "pagination.html" with page=posts %}
+
+
 
 {% endblock %}
