--- a/blogpost/template/base.html
+++ b/blogpost/template/base.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
+    <link href="{% static 'bootstrap/css/comment.css' %}" rel="stylesheet" media="screen">
     <style>
       /* Remove the navbar's default margin-bottom and rounded borders */ 
       .navbar {
@@ -24,15 +25,19 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="/">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="contact">Contact</a></li>
               </ul>
-              <ul class="nav navbar-nav navbar-right">
-                <!--<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
-              </ul>
+              <form action="." class="navbar-form navbar-right">
+                  <div class="form-group">
+                    <input name='search_results' type="text" class="form-control" placeholder="Search">
+                  </div>
+                  <button type="submit" class="btn btn-default" action='search_results'>Go!</button>
+                </form>
             </div>
+            
           </div>
         </nav>
       <div class="jumbotron text-center">
@@ -57,11 +62,9 @@
   </footer>
    <!-- JavaScripts -->
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
-    <script src="{% static 'js/contact_me.js' %}"></script>
-    <script src="{% static 'js/clean-blog.min.js' %}"></script>
+    
+    
+    
 
   </body>
 </html>
