--- a/blogpost/template/base.html
+++ b/blogpost/template/base.html
@@ -30,11 +30,13 @@
                 <li><a href="#">Projects</a></li>
                 <li><a href="contact">Contact</a></li>
               </ul>
-              <form action="." class="navbar-form navbar-right">
+              <form action='/search_results/' method='get' class="navbar-form navbar-right">
+                  
                   <div class="form-group">
-                    <input name='search_results' type="text" class="form-control" placeholder="Search">
+                    <input name='query' type="text" class="form-control" placeholder="Search">
                   </div>
-                  <button type="submit" class="btn btn-default" action='search_results'>Go!</button>
+                  <input type="submit" class="btn btn-default" value="Search" >
+                  <!--<button type="submit" class="btn btn-default">Go!</button>-->
                 </form>
             </div>
             
