--- a/blogpost/template/base.html
+++ b/blogpost/template/base.html
@@ -21,14 +21,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>                        
               </button>
-              <a class="navbar-brand" href="#">Logo</a>
+         
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/aboutme">About Me</a></li>
                 <li><a href="#">Projects</a></li>
-                <li><a href="contact">Contact</a></li>
+                <li><a href="/contact">Contact</a></li>
               </ul>
               <form action='/search_results/' method='get' class="navbar-form navbar-right">
                   
